@@ -8,6 +8,8 @@ Griffith ChangeLog
 2009-01-15  Michael Jahn
 	* Amazon movie plugin updated
 	* better results for amazon poster search
+	* movie plugin base class prepared for fetching screenplay and cameraman,
+	  added fetching of screenplay to IMDB plugin 
 
 2009-01-06  Michael Jahn
 	* MovieFone movie plugin updated
